--- a/css/accountCreate.css
+++ b/css/accountCreate.css
@@ -6,8 +6,8 @@ html {
 #logo {
     position: absolute;
     top: 20px;
-    width: 15vw;
-    height: 15vw;
+    width: 20vw;
+    height: 20vw;
 }
 
 h1 {
@@ -39,10 +39,9 @@ body {
 }
 
 .errorMessage {
-    border: 3px solid black;
-    background-color: red;
+    background-color: slateblue;
     color: white;
-    border-radius: 50px;
+    border-radius: 20px;
     text-align: center;
     width: 100%;
     font-size: 2.5vh;
@@ -78,10 +77,6 @@ body {
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.25);
     border-radius: 100px;
 }
-#logo {
-    width: 15vh;
-    height: 15vh;
-}
 
 .mainMobileButton {
     margin-top: 4vh;
@@ -101,6 +96,14 @@ body {
         margin: auto;
         border-radius: 20px;
         box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.3);
+        padding-top: 0;
+    }
+
+    #logo {
+        height: 10vh;
+        width: 10vh;
+        top: 20px;
+        left: 20px;
     }
 
 }
