--- a/css/accountCreateExtra.css
+++ b/css/accountCreateExtra.css
@@ -143,6 +143,18 @@ input[type="file"] {
     display: none;
 }
 
+#buttons {
+    width: 80%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    margin-bottom: 20px;
+}
+
+#delete-account-btn {
+    background-color: red;
+}
+
 
 @media screen and (min-aspect-ratio: 1/1) {
 
