--- a/css/projectDetails.css
+++ b/css/projectDetails.css
@@ -422,6 +422,44 @@ iframe {
     color: red;
 }
 
+.zoomD {
+    cursor: pointer;
+}
+
+#lb-back {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    background: rgba(0, 0, 0, 0.5);
+    z-index: 999;
+    visibility: hidden;
+    opacity: 0;
+    transition: all ease 0.4s;
+}
+
+#lb-back.show {
+    visibility: visible;
+    opacity: 1;
+}
+
+#lb-img {
+    width: 100%;
+    height: 100%;
+    position: relative;
+    top: 50%;
+    transform: translateY(-50%);
+    text-align: center;
+}
+
+#lb-img img {
+    width: 100%;
+    height: 100%;
+
+    object-fit: contain;
+}
+
 @media screen and (min-aspect-ratio: 1/1) {
 
     body {
