--- a/css/accountCreate.css
+++ b/css/accountCreate.css
@@ -4,10 +4,11 @@ html {
 }
 
 #logo {
+    margin: auto;
     position: absolute;
-    top: 20px;
-    width: 20vw;
-    height: 20vw;
+    top: 130px;
+    width: 700px;
+
 }
 
 h1 {
@@ -100,10 +101,9 @@ body {
     }
 
     #logo {
-        height: 10vh;
-        width: 10vh;
-        top: 20px;
-        left: 20px;
+        width: 500px;
+        top: -35px;
+        margin: auto;
     }
 
 }
