--- a/css/myProfile.css
+++ b/css/myProfile.css
@@ -3,6 +3,8 @@ body {
     max-width: 100%;
     overflow-x: hidden;
     position: relative;
+    margin: 0;
+    padding-top: 0;
 }
 
 .menuButton {
@@ -38,8 +40,8 @@ body {
 }
 
 #logo {
-    width: 10vw;
-    height: 10vw;
+    width: 500px;
+    height: 226px;
     margin: 0;
 }
 
@@ -370,14 +372,19 @@ a, a:hover, a:visited, a:active {
         font-size: 2vh;
     }
 
+    .menuTopRow {
+        justify-content: space-between;
+        align-items: center;
+    }
+
     .logo-container {
-        height: 80px;
-        width: 80px;
+        height: 100px;
+        width: 100px;
     }
 
     #logo {
-        height: 80px;
-        width: 80px;
+        width: 500px;
+        height: 226px;
     }
 
     .user {
