--- a/css/projectDetails.css
+++ b/css/projectDetails.css
@@ -3,6 +3,8 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin: 0;
+    padding-top: 0;
 }
 
 .menuMobile {
@@ -425,7 +427,7 @@ iframe {
 @media screen and (min-aspect-ratio: 1/1) {
 
     body {
-        padding: 0 200px;
+        padding: 0 200px 50px 200px;
     }
 
     #appOverview {
@@ -473,13 +475,18 @@ iframe {
     }
 
     .logo-container {
-        height: 80px;
-        width: 80px;
+        height: 100px;
+        width: 100px;
     }
 
     #logo {
-        height: 80px;
-        width: 80px;
+        width: 500px;
+        height: 226px;
+    }
+
+    #profilePic {
+        height: 68px;
+        width: 68px;
     }
 
     #userInfo {
