--- a/css/projectUpload.css
+++ b/css/projectUpload.css
@@ -3,6 +3,8 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin: 0;
+    padding-top: 0;
 }
 
 .menuButton {
@@ -39,7 +41,11 @@ body {
     border-radius: 20px;
 }
 
-#logo #profilePic {
+#logo{
+    width: 500px;
+    height: 226px;
+}
+#profilePic {
     width: 10vw;
     height: 10vw;
 }
@@ -297,13 +303,13 @@ button {
     }
 
     .logo-container {
-        height: 80px;
-        width: 80px;
+        height: 100px;
+        width: 100px;
     }
 
     #logo {
-        height: 80px;
-        width: 80px;
+        width: 500px;
+        height: 226px;
     }
 
     #regProjectPic {
@@ -318,7 +324,7 @@ button {
     }
 
     #uploadDetails {
-        width: 80%;
+        width: 90%;
     }
 
     .mainMobileInput {
