--- a/css/about.css
+++ b/css/about.css
@@ -3,9 +3,6 @@ body {
     color: white;
 }
 
-.about-foliohub {
-}
-
 h1 {
     font-size: 4vh;
     text-align: center;
@@ -34,14 +31,11 @@ li {
 }
 
 #started {
-    font-size: 2vh;
-}
-
-#started {
     margin-top: 3vh;
     margin-bottom: 8vh;
     width: 95%;
     text-align: center;
+    font-size: 2vh;
 }
 
 button {
@@ -49,6 +43,8 @@ button {
     min-width: 500px;
 }
 
+
+/* ---- DESKTOP MEDIA QUERIES ---- */
 @media screen and (min-aspect-ratio: 1/1) {
 
     .about-foliohub {
