--- a/css/projectUpload.css
+++ b/css/projectUpload.css
@@ -1,3 +1,4 @@
+/* ---- BODY ---- */
 body {
     max-width: 100%;
     display: flex;
@@ -7,50 +8,45 @@ body {
     padding-top: 0;
 }
 
-.menuButton {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-    align-items: center;
-    height: 10vw;
-    width: 10vw;
-    border: 2px solid black;
-    border-radius: 10px;
-    padding: 5px;
-}
-
-.menuMobile {
-    height: auto;
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: start;
-}
-
-.menuTopRow {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-}
-
-.bar {
-    width: 80%;
-    height: 7%;
-    margin: 6px 0;
-    border-radius: 20px;
-}
+/* ---- TOP ROW ---- */
 
 #logo{
     width: 500px;
     height: 226px;
 }
+
 #profilePic {
     width: 10vw;
     height: 10vw;
 }
 
-#regProjectPic, #projectPictures2 {
+/* ---- FORM ---- */
+
+#uploadDetails {
+    padding-top: 20px;
+    margin: auto;
+    width: 100%;
+    border-radius: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-content: center;
+}
+
+#projectName {
+    margin-top: 40px;
+}
+
+#shortDescTextArea {
+    resize: none;
+    border-radius: 20px;
+    width: 100%;
+    height: 12vh;
+    overflow: hidden;
+    text-align: left;
+}
+
+#regProjectPic {
     align-self: center;
     display: flex;
     flex-direction: column;
@@ -86,6 +82,21 @@ label p {
     transform: translate(-50%, -125%);
 }
 
+.mainMobileInput {
+    width: 100%;
+    align-self: center;
+    margin: 10px 0 10px 0;
+}
+
+#longDescTextArea {
+    margin: 40px 0;
+    height: 60vw;
+    text-align: left;
+    border-radius: 20px;
+}
+
+
+/* ---- YOUTUBE AND PICTURES---- */
 .add-youtube-search {
     display: flex;
     flex-direction: row;
@@ -109,6 +120,7 @@ label p {
     padding-bottom: 56.25%; /* 16:9, for an aspect ratio of 1:1 change to this value to 100% */
     display: none;
 }
+
 iframe{
     position: absolute;
     top: 0;
@@ -132,47 +144,6 @@ input[type="file"] {
     height: 7vh;
     border-radius: 20px;
     box-shadow: 0 8px 16px 0 rgba(0,0,0, 30%);
-}
-
-.hidden-input {
-    visibility: collapse;
-}
-
-#uploadDetails {
-    padding-top: 20px;
-    margin: auto;
-    width: 100%;
-    border-radius: 20px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-content: center;
-}
-
-#projectName {
-    margin-top: 40px;
-}
-
-#shortDescTextArea {
-    resize: none;
-    border-radius: 20px;
-    width: 100%;
-    height: 12vh;
-    overflow: hidden;
-    text-align: left;
-}
-
-.mainMobileInput {
-    width: 100%;
-    align-self: center;
-    margin: 10px 0 10px 0;
-}
-
-#longDescTextArea {
-    margin: 40px 0;
-    height: 60vw;
-    text-align: left;
-    border-radius: 20px;
 }
 
 #projectPictures {
@@ -262,6 +233,8 @@ input {
     justify-content: center;
 }
 
+/* ---- BUTTONS ---- */
+
 button {
     margin: auto;
 }
@@ -269,6 +242,8 @@ button {
 #deleteBtn {
     display: none;
 }
+
+/* ---- CHECKBOX ---- */
 
 #div-private {
     height: 10vh;
@@ -294,7 +269,10 @@ button {
     padding: 0;
 }
 
+/* ---- DESKTOP MEDIA QUERIES ---- */
+
 @media screen and (min-aspect-ratio: 1/1) {
+
     body {
         width: 850px;
         margin: 20px auto;
@@ -311,6 +289,8 @@ button {
         width: 500px;
         height: 226px;
     }
+
+    /* ---- FORM ---- */
 
     #regProjectPic {
         height: 300px;
@@ -335,6 +315,11 @@ button {
         font-size: 20px;
     }
 
+    #longDescTextArea {
+        height: 300px;
+    }
+
+    /* ---- PICTURES ---- */
     #projectPictures .custom-file-upload {
         font-size: 20px;
         height: 60px;
@@ -379,6 +364,7 @@ button {
     .uploadedPic-container:hover {
         cursor: pointer;
     }
+
     .uploadedPic-container #hoverDeletePic {
         display: flex;
     }
@@ -396,9 +382,8 @@ button {
         height: 350px;
         aspect-ratio: auto;
     }
-    #longDescTextArea {
-        height: 300px;
-    }
+
+    /* ---- BUTTONS ---- */
 
     #private {
         width: 40px;
@@ -408,6 +393,5 @@ button {
         font-size: 20px;
         margin-left: 20px;
     }
-
 }
 
