--- a/css/userLogin.css
+++ b/css/userLogin.css
@@ -1,3 +1,4 @@
+/* ---- HTML BODY ---- */
 html {
     width: 100%;
     height: 100%;
@@ -11,6 +12,7 @@ body {
     height: 100vh;
 }
 
+/* form inputs and buttons */
 .forms {
     width: 100%;
     display: flex;
@@ -25,10 +27,12 @@ body {
     top: 130px;
     width: 700px;
 }
+
 h1 {
     font-size: 4vh;
     color: rgba(255,255,255,0.8);
 }
+
 #login {
     width: 90%;
     display: flex;
@@ -57,9 +61,9 @@ a:hover {
     text-align: center;
 }
 
+/* ---- DESKTOP MEDIA QUERIES ---- */
+
 @media screen and (min-aspect-ratio: 1/1) {
-
-
 
     body {
         position: absolute;
