--- a/css/myProfile.css
+++ b/css/myProfile.css
@@ -335,7 +335,8 @@ a, a:hover, a:visited, a:active {
 @media screen and (min-aspect-ratio: 1/1) {
 
     body {
-        padding: 0 200px;
+        width: 800px;
+        margin: auto;
     }
 
     /* ---- SEARCHBAR AND FILTER ---- */
