--- a/css/projectUpload.css
+++ b/css/projectUpload.css
@@ -5,14 +5,14 @@ body {
     flex-direction: column;
     align-items: center;
     margin: 0;
-    padding-top: 0;
+    padding-top: 20px;
 }
 
 /* ---- TOP ROW ---- */
 
 #logo{
-    width: 500px;
-    height: 226px;
+    width: 300px;
+    height: auto;
 }
 
 #profilePic {
@@ -286,8 +286,8 @@ button {
     }
 
     #logo {
-        width: 500px;
-        height: 226px;
+        width: 300px;
+        height: auto;
     }
 
     /* ---- FORM ---- */
